--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
- #root{
+body{
+    margin: 0;
+}
+#root{
     margin: 0;
     width: 100vw;
     height: 100%;
@@ -6,8 +9,11 @@
 }
 
 .main-div {
+    flex-direction: column;
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 form {
@@ -19,4 +25,7 @@ form {
 textarea{
     width: 100%;
     height: 70%;
+}
+p{
+    margin: 0;
 }
